--- a/index.html
+++ b/index.html
@@ -6,10 +6,29 @@
         <link rel="stylesheet" type="text/css" href="reset.css" />
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
-    <body ng-app="flashCards" ng-controller="MainController">
-    	<div
-    		ng-repeat="flashCard in flashCards | orderBy : 'question'"
-    		class="flash-card">
+    <body ng-app="flashCards">
+      <div ng-controller="StatsController" id="statistics">
+        <div id="scoreboard">
+          <h3>Correct: <span>{{ scores.correct }}</span></h3>
+          <h3>Incorrect: <span>{{ scores.incorrect }}</span></h3>
+        </div>
+      </div>
+      <div ng-controller="MainController">
+        <div class="flash-card">
+          <h1> Categories </h1>
+          <button 
+                ng-repeat="category in categories" 
+                class="category-button" 
+                ng-class="category-button.active"
+                ng-click="getCategoryCards(category)">{{ category }}</button>
+            <button  
+                class="category-button" 
+                ng-class="category-button.active"
+                ng-click="reset()">Reset</button>
+        </div>
+    	  <div
+    		  ng-repeat="flashCard in flashCards | orderBy : 'question'"
+    		  class="flash-card">
     	    <h1>{{ flashCard.question | uppercase }}</h1>
     	    <ul class="flash-card-answers">
     	    	<li
@@ -24,7 +43,8 @@
     	        <span ng-show="flashCard.answeredCorrectly">Yeah, you got it right!</span>
     	        <span ng-show="!flashCard.answeredCorrectly">Nope, you got it wrong.</span>
     	    </h2>
-    	</div>
+    	  </div>
+      </div>
     	<script src="angular.js"></script>
     	<script src="app.js"></script>
     	<script src="main.controller.js"></script>
