--- a/index.html
+++ b/index.html
@@ -3,41 +3,32 @@
     <head>
         <title>Flash Cards</title>
         <!-- We've provided some styles for you, aren't we nice? -->
-        <link rel="stylesheet" type="text/css" href="reset.css" />
-        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" type="text/css" href="css/reset.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
     <body ng-app="flashCards">
-      <div ng-controller="StatsController" id="statistics">
-        <div id="scoreboard">
-          <h3>Correct: <span>{{ scores.correct }}</span></h3>
-          <h3>Incorrect: <span>{{ scores.incorrect }}</span></h3>
-        </div>
-      </div>
+      <div ng-controller="StatsController" ng-include="'templates/statistics.html'" id="statistics"></div>
       <div ng-controller="MainController">
         <div class="flash-card">
           <h1> Categories </h1>
-          <button 
-                ng-repeat="category in categories" 
-                class="category-button" 
+          <button class="category-button" 
+                ng-repeat="category in categories"
                 ng-class="category-button.active"
                 ng-click="getCategoryCards(category)">{{ category }}</button>
-            <button  
-                class="category-button" 
+          <button  
+                class="category-button"
                 ng-class="category-button.active"
                 ng-click="reset()">Reset</button>
         </div>
-    	  <div
-    		  ng-repeat="flashCard in flashCards | orderBy : 'question'"
-    		  class="flash-card">
-    	    <h1>{{ flashCard.question | uppercase }}</h1>
+    	  <div class="flash-card"
+    		  ng-repeat="flashCard in flashCards">
+    	    <h1>{{ flashCard.question }}</h1>
     	    <ul class="flash-card-answers">
-    	    	<li
+    	    	<li class="flash-card-answer"
     	    		ng-repeat="answer in flashCard.answers"
-    	    		class="flash-card-answer"
     	    		ng-click="answerQuestion(answer, flashCard)">{{ answer.text }}</li>
     	    </ul>
-    	    <h2
-    	    	class="answer-feedback"
+    	    <h2 class="answer-feedback"
     	    	ng-class="flashCard.answeredCorrectly ? 'correct' : 'incorrect'"
     	    	ng-show="flashCard.answered">
     	        <span ng-show="flashCard.answeredCorrectly">Yeah, you got it right!</span>
@@ -45,8 +36,8 @@
     	    </h2>
     	  </div>
       </div>
-    	<script src="angular.js"></script>
-    	<script src="app.js"></script>
-    	<script src="main.controller.js"></script>
+    	<script src="js/lib/angular.js"></script>
+    	<script src="js/app.js"></script>
+    	<script src="js/controllers/MainController.js"></script>
     </body>
 </html>
