--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <button  
                 class="category-button"
                 ng-class="category-button.active"
-                ng-click="reset()">Reset</button>
+                ng-click="getAllCards()">Reset</button>
         </div>
     	  <div class="flash-card"
     		  ng-repeat="flashCard in flashCards">
@@ -38,6 +38,7 @@
       </div>
     	<script src="js/lib/angular.js"></script>
     	<script src="js/app.js"></script>
+        <script src="js/factories/ScoreFactory.js"></script>
     	<script src="js/controllers/MainController.js"></script>
     </body>
 </html>
